--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="cardMain">
             <div class="card" style="width: 18rem;">
                 <video className="projectVideoComponent" height="120px" controls>    
-                    <source src="./assests/amazon-clone.mp4"/>
+                    <source src="./amazon-clone.mp4"/>
                    </video>
                 <div class="card-body">
                   <h5 class="card-title">Amazon-Clone</h5>
@@ -162,7 +162,7 @@
               </div>
             <div class="card" style="width: 18rem;">
                 <video className="projectVideoComponent" height="120px"  controls>    
-                    <source src="./assests/Newsapp.mp4"/>
+                    <source src="./Newsapp.mp4"/>
                    </video>
                 <div class="card-body">
                   <h5 class="card-title">NewsApp</h5>
@@ -172,7 +172,7 @@
               </div>
             <div class="card" style="width: 18rem;">
                 <video className="projectVideoComponent" height="120px" controls>    
-                    <source src="./assests/NftApp.mp4"/>
+                    <source src="./NftApp.mp4"/>
                    </video>
                 <div class="card-body">
                   <h5 class="card-title">NFT-react</h5>
@@ -182,7 +182,7 @@
               </div>
             <div class="card" style="width: 18rem;">
                 <video className="projectVideoComponent" height="120px" controls>    
-                    <source src="./assests/votingApp.mp4"/>
+                    <source src="./votingApp.mp4"/>
                    </video>
                 <div class="card-body">
                   <h5 class="card-title">Voting Dapp</h5>
