--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <!--Progress bar-->
             <div class="container-fluid progrssContainer">
-                <img src="./assests/aboutImage.png" alt="">
+                <img src="./aboutImage.png" alt="">
                 <div class="row aboutProgress">
                     <div class="col-md-6">
                         <h3 class="progress-title">HTML5</h3>
